test: 前后端单元测试全覆盖 (后端 687 + 前端 550)
- 后端：common/config/controller/service/entity/dto/event 全层测试
  补充 HybridRetrievalService、KnowledgeGraphService 等服务测试
  controller 测试迁移 @MockBean -> @MockitoBean (Spring Boot 3.4)
- 前端：api/stores/composables/router/utils + UI/业务组件/views 测试
  排除 __tests__ 出 tsconfig 构建；vite 配置 setupFiles
- 删除旧的 auth/request 测试，由新结构替代

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>